# rdflib-endpoint

./: .coverage.wl1s-230-52.unil.ch.29255.XzkCfRNx  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  restart_deployment.sh  setup.py  sonar-project.properties
.github/workflows/: codeql-analysis.yml  publish-package.yml  publish.yml  release.yml  run-tests.yml  test.yml
app/: custom_eval.py  function_openpredict.py  main.py  openpredict_classifier.py  rdflib_web.py  service-description.ttl  sparql_endpoint.py
app/data/models/: openpredict-baseline-omim-drugbank.joblib
app/data/resources/: known-drug-diseases.csv  openpredict-omim-drug.csv
example/: .gitignore  Dockerfile  README.md  compose.yml  custom_eval.py  docker-compose.yml  gen_docs.py  main.py  pyproject.toml  requirements.txt
example/app/: custom_eval.py  main.py
rdflib_endpoint/: __init__.py  __main__.py  sparql_endpoint.py  yasgui.html
scripts/: cov.sh  dev.sh  fmt.sh  install.sh  release.sh
src/rdflib_endpoint/: __init__.py  __main__.py  dataset_ext.py  gen_docs.py  sparql_endpoint.py  sparql_router.py  utils.py  yasgui.html
tests/: Dockerfile  compose.yml  federation.md  test_cli.py  test_dataset_ext.py  test_example_app.py  test_federation.py  test_oxrdflib.py  test_parse_accept.py  test_rdflib_endpoint.py  test_serve.py  test_serve_cli.py
tests/resources/: another.jsonld  custom_eval_todo.py  test.nq  test2.ttl
