[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.7"
name = "rdflib-endpoint"
description = "A package to deploy SPARQL endpoint to serve local RDF files, machine learning models, or any other logic implemented in Python, using RDFLib and FastAPI."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
maintainers = [
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [
    "Python",
    "SPARQL",
    "RDF",
    "RDFLib",
    "endpoint",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    "rdflib >=6.0.0",
    "fastapi >=0.51.0",
]


[project.scripts]
rdflib-endpoint = "rdflib_endpoint.__main__:cli"


[project.optional-dependencies]
cli =[
    "uvicorn[standard] >=0.12.0",
    "click",
]
web =[
    "uvicorn[standard] >=0.12.0",
    "gunicorn",
]
oxigraph =[
    "oxrdflib",
]
test = [
    "pytest >=7.1.3",
    "pytest-cov >=3.0.0",
    "pre-commit >=3.3.0",
    "mypy >=1.4.1",
    "requests",
    "httpx",
    "types-PyYAML",
    "types-setuptools",
    "types-ujson",
    "types-click",
]


[project.urls]
Homepage = "https://github.com/vemonet/rdflib-endpoint"
Documentation = "https://github.com/vemonet/rdflib-endpoint"
History = "https://github.com/vemonet/rdflib-endpoint/releases"
Tracker = "https://github.com/vemonet/rdflib-endpoint/issues"
Source = "https://github.com/vemonet/rdflib-endpoint"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "cli",
    "web",
    "oxigraph",
    "test",
]
post-install-commands = [
    "pre-commit install",
]

[tool.hatch.envs.default.scripts]
dev = "uvicorn example.app.main:app --reload {args}"
fmt = [
    "pre-commit run --all --all-files",
    "mypy",
]
test = [
    "fmt",
    "pytest --cov-fail-under=85 {args}",
]
cov = [
    "pytest --cov-report html {args}",
    "python -c 'import webbrowser; webbrowser.open(\"http://0.0.0.0:3000\")'",
    "python -m http.server 3000 --directory ./htmlcov",
]


[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

# TOOLS
[tool.hatch.version]
path = "src/rdflib_endpoint/__init__.py"


[tool.coverage.run]
source = ["src"]
branch = false

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--cov=src",
    "--color=yes",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*:"
]


[tool.mypy]
files = ["src/"]
strict = true
implicit_reexport = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = false # needed due to _eval() not being typed in rdflib


[tool.black]
color = true
line-length = 120
target-version = ['py37']
skip-string-normalization = false


# https://beta.ruff.rs/docs/rules
[tool.ruff]
src = ["src", "tests"]
target-version = "py37"
line-length = 120
select = [
    "I",     # isort
    "N",     # pep8-naming
    "S",     # bandit
    "A",     # flake8-builtins
    "YTT",   # flake8-2020
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
    "ICN",   # flake8-import-conventions
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "Q",     # flake8-quotes
    # "FBT",   # flake8-boolean-trap
    "F",     # pyflakes
    "UP",    # pyupgrade
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "PLC",   # pylint convention
    "PLE",   # pylint error
    # "PLR",   # pylint refactor Magic value used in comparison, consider replacing 400 with a constant variable
    "PLW",   # pylint warning
    "RUF",   # ruff specific
    "T",
]

ignore = [
    "B008", # do not perform function calls in argument defaults (required for FastAPI afaik)
    "E501", # line too long
    "C901", # too complex
    "S101", # Use of `assert` detected
    "T201", "T203", # remove print and pprint
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"] # module imported but unused
